# tm-notify

./: .gitignore  Cargo.toml  README.org
.github/: dependabot.yml
.github/workflows/: release.yml  review.yml  rust.yml
cdk/: dummy-lambda-code  package-lock.json  package.json
cdk/lib/: cdk-stack.ts  tm_notify.ts
code/: Cargo.toml
code/src/: main.rs
src/: main.rs
tm-notify/: Cargo.toml
tm-notify/src/: main.rs
