[package]
name = "tm-notify"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1"
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
aws_sdk_s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.12-alpha", package = "aws-sdk-s3", features = ["rustls", "client"] }

tracing = "0.1"
tracing-subscriber = "0.2"
lambda_runtime = "0.3.0"
bytes = "1.0.1"
futures = "0.3"
